--- a/arch/arm64/configs/lineageos_h930_defconfig
+++ b/arch/arm64/configs/lineageos_h930_defconfig
@@ -25,7 +25,6 @@ CONFIG_HAVE_GENERIC_RCU_GUP=y
 CONFIG_ARCH_DMA_ADDR_T_64BIT=y
 CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_NEED_SG_DMA_LENGTH=y
-CONFIG_SMP=y
 CONFIG_HOTPLUG_SIZE_BITS=30
 CONFIG_ARM64_DMA_USE_IOMMU=y
 CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=9
@@ -165,7 +164,7 @@ CONFIG_SCHED_TUNE=y
 # CONFIG_DYNAMIC_STUNE_BOOST is not set
 # CONFIG_STUNE_ASSIST is not set
 CONFIG_CPUSETS_ASSIST=y
-# CONFIG_DEFAULT_USE_ENERGY_AWARE is not set
+CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
@@ -603,34 +602,11 @@ CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
 CONFIG_CPU_FREQ_TIMES=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
-# CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_SCHEDUTIL is not set
-CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-# CONFIG_CPU_BOOST is not set
-# CONFIG_CPU_FREQ_GOV_SCHEDUTIL is not set
-# CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL is not set
-CONFIG_CPU_INPUT_BOOST=y
-CONFIG_POWERHAL_BOOST_DURATION_MS=5000
-CONFIG_INPUT_BOOST_DURATION_MS=5000
-CONFIG_WAKE_BOOST_DURATION_MS=5000
-CONFIG_BASE_BOOST_FREQ_LP=300000
-CONFIG_BASE_BOOST_FREQ_PERF=806400
-CONFIG_INPUT_BOOST_FREQ_LP=1036800
-CONFIG_INPUT_BOOST_FREQ_PERF=1132800
-CONFIG_MAX_BOOST_FREQ_LP=1900800
-CONFIG_MAX_BOOST_FREQ_PERF=2592000
-
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
+# CONFIG_CPU_INPUT_BOOST is not set
 #
 # CPU frequency scaling drivers
 #
@@ -662,7 +638,6 @@ CONFIG_XFRM_STATISTICS=y
 CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 # CONFIG_NET_KEY_MIGRATE is not set
-CONFIG_XFRM_FRAG_ESP_BEFORE_TUNNEL_ENC=y
 CONFIG_INET=y
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
@@ -743,13 +718,7 @@ CONFIG_IPV6_NDISC_NODETYPE=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_IPV6_SUBTREES=y
 # CONFIG_IPV6_MROUTE is not set
-CONFIG_LGP_DATA_IMPROVE_QCT_EPDG_CONNECTION_TIME2=y
 CONFIG_NETLABEL=y
-# CONFIG_MPTCP is not set
-CONFIG_DEFAULT_MPTCP_PM="default"
-# CONFIG_LGP_DATA_TCPIP_MPTCP_CHECKSUM_ENABLE is not set
-# CONFIG_LGP_DATA_TCPIP_MPTCP_SYN_RETRY_1 is not set
-# CONFIG_LGP_DATA_TCPIP_MPTCP is not set
 CONFIG_ANDROID_PARANOID_NETWORK=y
 CONFIG_NETWORK_SECMARK=y
 # CONFIG_NET_PTP_CLASSIFY is not set
@@ -896,7 +865,6 @@ CONFIG_NETFILTER_XT_MATCH_STRING=y
 CONFIG_NETFILTER_XT_MATCH_TCPMSS=y
 CONFIG_NETFILTER_XT_MATCH_TIME=y
 CONFIG_NETFILTER_XT_MATCH_U32=y
-# CONFIG_LG_VPN_V37 is not set
 # CONFIG_IP_SET is not set
 # CONFIG_IP_VS is not set
 
@@ -2479,7 +2447,6 @@ CONFIG_LGE_PM_DEBUG=y
 CONFIG_LGE_PM_VENEER_PSY=y
 # CONFIG_POWER_AVS is not set
 CONFIG_MSM_PM=y
-CONFIG_APSS_CORE_EA=y
 CONFIG_MSM_APM=y
 CONFIG_MSM_IDLE_STATS=y
 CONFIG_MSM_IDLE_STATS_FIRST_BUCKET=62500
@@ -4988,6 +4955,22 @@ CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_EXFAT_DISCARD=y
 CONFIG_EXFAT_COMPAT_TUXERA=y
 # CONFIG_EXFAT_DEBUG is not set
+CONFIG_SDFAT_FS=y
+CONFIG_SDFAT_DELAYED_META_DIRTY=y
+# CONFIG_SDFAT_SUPPORT_DIR_SYNC is not set
+CONFIG_SDFAT_DEFAULT_CODEPAGE=437
+CONFIG_SDFAT_DEFAULT_IOCHARSET="utf8"
+# CONFIG_SDFAT_CHECK_RO_ATTR is not set
+CONFIG_SDFAT_ALIGNED_MPAGE_WRITE=y
+CONFIG_SDFAT_VIRTUAL_XATTR=y
+CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
+CONFIG_SDFAT_DEBUG=y
+# CONFIG_SDFAT_DBG_IOCTL is not set
+CONFIG_SDFAT_DBG_MSG=y
+# CONFIG_SDFAT_DBG_BUGON is not set
+# CONFIG_SDFAT_DBG_WARNON is not set
+CONFIG_SDFAT_STATISTICS=y
+CONFIG_SDFAT_UEVENT=y
 CONFIG_NTFS_FS=y
 # CONFIG_NTFS_DEBUG is not set
 CONFIG_NTFS_RW=y
