--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1594,6 +1594,10 @@ config CC_OPTIMIZE_FOR_SIZE
 
 endchoice
 
+config LTO
+	bool "Enable Link Time Optimization"
+	select THIN_ARCHIVES
+
 config SYSCTL
 	bool
 
