--- a/arch/arm/boot/dts/qcom/msm8998.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8998.dtsi
@@ -436,10 +436,9 @@
                     dev = "/dev/block/platform/soc/1da4000.ufshc/by-name/vendor";
                     type = "ext4";
                     mnt_flags = "ro,barrier=1,discard";
-                    fsmgr_flags = "wait,slotselect,verify";
-                    status = "disabled";
+                    fsmgr_flags = "wait,verify";
+                    status = "ok";
                 };
-#ifndef CONFIG_LGE_MSM8998_ENABLE_SYSTEM_AS_ROOT
                 system {
                     compatible = "android,system";
                     dev = "/dev/block/platform/soc/1da4000.ufshc/by-name/system";
@@ -448,7 +447,6 @@
                     fsmgr_flags = "wait,verify";
                     status = "ok";
                 };
-#endif
 			};
 		};
 	};
