--- a/arch/arm64/configs/new_defconfig
+++ b/arch/arm64/configs/new_defconfig
@@ -333,6 +333,7 @@ CONFIG_DEFAULT_MAPLE=y
 CONFIG_DEFAULT_IOSCHED="maple"
 =======
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_ANXIETY=y
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_MAPLE=y
