--- a/arch/arm64/configs/new_defconfig
+++ b/arch/arm64/configs/new_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.262 Kernel Configuration
+# Linux/arm64 4.4.264 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -316,34 +316,19 @@ CONFIG_BLOCK_COMPAT=y
 CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
-<<<<<<< HEAD
-CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_FIOPS=y
-CONFIG_IOSCHED_SIO=y
-# CONFIG_IOSCHED_BFQ is not set
 CONFIG_IOSCHED_ZEN=y
-# CONFIG_DEFAULT_DEADLINE is not set
-# CONFIG_DEFAULT_CFQ is not set
-# CONFIG_DEFAULT_NOOP is not set
-# CONFIG_DEFAULT_SIO is not set
-# CONFIG_DEFAULT_FIOPS is not set
-# CONFIG_DEFAULT_ZEN is not set
-CONFIG_DEFAULT_MAPLE=y
-CONFIG_DEFAULT_IOSCHED="maple"
-=======
-CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_ANXIETY=y
-CONFIG_IOSCHED_FIOPS=y
-CONFIG_IOSCHED_ZEN=y
-CONFIG_IOSCHED_MAPLE=y
+CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_ZEN is not set
 # CONFIG_DEFAULT_MAPLE is not set
+# CONFIG_DEFAULT_ANXIETY is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
->>>>>>> 100705734a18... Merge 4.4.214 into kernel.lnx.4.4.r40-rel
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -502,7 +487,6 @@ CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 CONFIG_FRAME_VECTOR=y
 # CONFIG_FORCE_ALLOC_FROM_DMA_ZONE is not set
 CONFIG_PROCESS_RECLAIM=y
-CONFIG_HSWAP=y
 # CONFIG_BOOST_DYING_TASK is not set
 CONFIG_READAHEAD_MMAP_SIZE_ENABLE=y
 CONFIG_READAHEAD_MMAP_PAGE_CNT=8
@@ -619,10 +603,7 @@ CONFIG_CPU_FREQ_TIMES=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
-<<<<<<< HEAD
-=======
-# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_SCHEDUTIL is not set
->>>>>>> 100705734a18... Merge 4.4.214 into kernel.lnx.4.4.r40-rel
+CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
@@ -720,17 +701,12 @@ CONFIG_TCP_CONG_HTCP=y
 # CONFIG_TCP_CONG_ILLINOIS is not set
 # CONFIG_TCP_CONG_DCTCP is not set
 # CONFIG_TCP_CONG_CDG is not set
-<<<<<<< HEAD
-CONFIG_DEFAULT_BIC=y
-=======
-# CONFIG_TCP_CONG_BBR is not set
 # CONFIG_DEFAULT_BIC is not set
->>>>>>> 100705734a18... Merge 4.4.214 into kernel.lnx.4.4.r40-rel
 # CONFIG_DEFAULT_CUBIC is not set
 # CONFIG_DEFAULT_HTCP is not set
-# CONFIG_DEFAULT_WESTWOOD is not set
+CONFIG_DEFAULT_WESTWOOD=y
 # CONFIG_DEFAULT_RENO is not set
-CONFIG_DEFAULT_TCP_CONG="bic"
+CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
@@ -1284,9 +1260,6 @@ CONFIG_PNPACPI=y
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
-CONFIG_ZRAM=y
-# CONFIG_ZRAM_WRITEBACK is not set
-# CONFIG_ZRAM_MEMORY_TRACKING is not set
 # CONFIG_BLK_CPQ_CISS_DA is not set
 # CONFIG_BLK_DEV_DAC960 is not set
 # CONFIG_BLK_DEV_UMEM is not set
@@ -3458,6 +3431,7 @@ CONFIG_SND_SOC_MSM_STUB=y
 CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
 # CONFIG_SND_SOC_SDM660_CDC is not set
 # CONFIG_SND_SOC_MSM_SDW is not set
+CONFIG_SOUND_CONTROL=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
 
@@ -4918,13 +4892,8 @@ CONFIG_ACPI_BUTTON=y
 CONFIG_ACPI_FAN=y
 # CONFIG_ACPI_DOCK is not set
 CONFIG_ACPI_PROCESSOR=y
-<<<<<<< HEAD
 # CONFIG_ACPI_HOTPLUG_CPU is not set
 # CONFIG_ACPI_THERMAL is not set
-=======
-CONFIG_ACPI_HOTPLUG_CPU=y
-CONFIG_ACPI_THERMAL=y
->>>>>>> 100705734a18... Merge 4.4.214 into kernel.lnx.4.4.r40-rel
 # CONFIG_ACPI_CUSTOM_DSDT is not set
 # CONFIG_ACPI_DEBUG is not set
 # CONFIG_ACPI_PCI_SLOT is not set
@@ -4958,12 +4927,13 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_OCFS2_FS is not set
 # CONFIG_BTRFS_FS is not set
 # CONFIG_NILFS2_FS is not set
-<<<<<<< HEAD
-CONFIG_F2FS_FS=y
-=======
-# CONFIG_F2FS_FS is not set
->>>>>>> 100705734a18... Merge 4.4.214 into kernel.lnx.4.4.r40-rel
 # CONFIG_FS_DAX is not set
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_F2FS_FS_SECURITY=y
+CONFIG_F2FS_FS_ENCRYPTION=y
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
 # CONFIG_FS_ENCRYPTION is not set
