--- a/arch/arm64/configs/new_defconfig
+++ b/arch/arm64/configs/new_defconfig
@@ -138,7 +138,7 @@ CONFIG_GENERIC_SCHED_CLOCK=y
 # CONFIG_PELT_HALFLIFE_32 is not set
 CONFIG_PELT_HALFLIFE_16=y
 # CONFIG_PELT_HALFLIFE_8 is not set
-CONFIG_DYNAMIC_STUNE_BOOST=y
+# CONFIG_DYNAMIC_STUNE_BOOST is not set
 CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
