--- a/arch/arm64/configs/new_defconfig
+++ b/arch/arm64/configs/new_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.267 Kernel Configuration
+# Linux/arm64 4.4.268 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -25,7 +25,6 @@ CONFIG_HAVE_GENERIC_RCU_GUP=y
 CONFIG_ARCH_DMA_ADDR_T_64BIT=y
 CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_NEED_SG_DMA_LENGTH=y
-CONFIG_SMP=y
 CONFIG_HOTPLUG_SIZE_BITS=30
 CONFIG_ARM64_DMA_USE_IOMMU=y
 CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=9
@@ -138,7 +137,6 @@ CONFIG_GENERIC_SCHED_CLOCK=y
 # CONFIG_PELT_HALFLIFE_32 is not set
 CONFIG_PELT_HALFLIFE_16=y
 # CONFIG_PELT_HALFLIFE_8 is not set
-# CONFIG_DYNAMIC_STUNE_BOOST is not set
 CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
@@ -163,6 +161,9 @@ CONFIG_NAMESPACES=y
 CONFIG_NET_NS=y
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_SCHED_TUNE=y
+# CONFIG_DYNAMIC_STUNE_BOOST is not set
+# CONFIG_STUNE_ASSIST is not set
+# CONFIG_CPUSETS_ASSIST is not set
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
