--- a/arch/arm64/configs/new_defconfig
+++ b/arch/arm64/configs/new_defconfig
@@ -323,6 +323,7 @@ CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_ANXIETY=y
+CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_ZEN is not set
