--- a/arch/arm64/configs/new_defconfig
+++ b/arch/arm64/configs/new_defconfig
@@ -616,16 +616,7 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 # CONFIG_CPU_BOOST is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
-CONFIG_CPU_INPUT_BOOST=y
-CONFIG_POWERHAL_BOOST_DURATION_MS=0
-CONFIG_INPUT_BOOST_DURATION_MS=0
-CONFIG_WAKE_BOOST_DURATION_MS=0
-CONFIG_BASE_BOOST_FREQ_LP=300000
-CONFIG_BASE_BOOST_FREQ_PERF=300000
-CONFIG_INPUT_BOOST_FREQ_LP=300000
-CONFIG_INPUT_BOOST_FREQ_PERF=300000
-CONFIG_MAX_BOOST_FREQ_LP=1900800
-CONFIG_MAX_BOOST_FREQ_PERF=2457600
+# CONFIG_CPU_INPUT_BOOST is not set
 
 #
 # CPU frequency scaling drivers
