--- a/arch/arm64/configs/new_defconfig
+++ b/arch/arm64/configs/new_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.268 Kernel Configuration
+# Linux/arm64 4.4.270 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -25,6 +25,7 @@ CONFIG_HAVE_GENERIC_RCU_GUP=y
 CONFIG_ARCH_DMA_ADDR_T_64BIT=y
 CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_NEED_SG_DMA_LENGTH=y
+CONFIG_SMP=y
 CONFIG_HOTPLUG_SIZE_BITS=30
 CONFIG_ARM64_DMA_USE_IOMMU=y
 CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=9
@@ -159,6 +160,7 @@ CONFIG_NAMESPACES=y
 # CONFIG_USER_NS is not set
 # CONFIG_PID_NS is not set
 CONFIG_NET_NS=y
+# CONFIG_SCHED_AUTOGROUP is not set
 CONFIG_SCHED_TUNE=y
 # CONFIG_DYNAMIC_STUNE_BOOST is not set
 # CONFIG_STUNE_ASSIST is not set
@@ -319,16 +321,18 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_ANXIETY=y
-CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_ZEN is not set
 # CONFIG_DEFAULT_MAPLE is not set
 # CONFIG_DEFAULT_ANXIETY is not set
 # CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_FIOPS is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
@@ -433,6 +437,7 @@ CONFIG_HZ_100=y
 # CONFIG_HZ_250 is not set
 # CONFIG_HZ_300 is not set
 # CONFIG_HZ_1000 is not set
+CONFIG_HZ=100
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_SUPPORTS_DEBUG_PAGEALLOC=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
@@ -645,7 +650,6 @@ CONFIG_XFRM_STATISTICS=y
 CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 # CONFIG_NET_KEY_MIGRATE is not set
-CONFIG_XFRM_FRAG_ESP_BEFORE_TUNNEL_ENC=y
 CONFIG_INET=y
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
@@ -726,13 +730,7 @@ CONFIG_IPV6_NDISC_NODETYPE=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_IPV6_SUBTREES=y
 # CONFIG_IPV6_MROUTE is not set
-CONFIG_LGP_DATA_IMPROVE_QCT_EPDG_CONNECTION_TIME2=y
 CONFIG_NETLABEL=y
-# CONFIG_MPTCP is not set
-CONFIG_DEFAULT_MPTCP_PM="default"
-# CONFIG_LGP_DATA_TCPIP_MPTCP_CHECKSUM_ENABLE is not set
-# CONFIG_LGP_DATA_TCPIP_MPTCP_SYN_RETRY_1 is not set
-# CONFIG_LGP_DATA_TCPIP_MPTCP is not set
 CONFIG_ANDROID_PARANOID_NETWORK=y
 CONFIG_NETWORK_SECMARK=y
 # CONFIG_NET_PTP_CLASSIFY is not set
@@ -879,7 +877,6 @@ CONFIG_NETFILTER_XT_MATCH_STRING=y
 CONFIG_NETFILTER_XT_MATCH_TCPMSS=y
 CONFIG_NETFILTER_XT_MATCH_TIME=y
 CONFIG_NETFILTER_XT_MATCH_U32=y
-# CONFIG_LG_VPN_V37 is not set
 # CONFIG_IP_SET is not set
 # CONFIG_IP_VS is not set
 
@@ -2625,7 +2622,6 @@ CONFIG_THERMAL_TSENS8974=y
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
 CONFIG_QCOM_THERMAL_LIMITS_DCVS=y
-# CONFIG_MSM_THERMAL_SIMPLE is not set
 # CONFIG_QCOM_SPMI_TEMP_ALARM is not set
 CONFIG_LGE_PM_THERMAL_LOG=y
 CONFIG_LGE_PM_THERMAL_VTS=y
@@ -4922,6 +4918,7 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_OCFS2_FS is not set
 # CONFIG_BTRFS_FS is not set
 # CONFIG_NILFS2_FS is not set
+# CONFIG_F2FS_FS is not set
 # CONFIG_FS_DAX is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
@@ -4969,6 +4966,22 @@ CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_EXFAT_DISCARD=y
 CONFIG_EXFAT_COMPAT_TUXERA=y
 # CONFIG_EXFAT_DEBUG is not set
+CONFIG_SDFAT_FS=y
+CONFIG_SDFAT_DELAYED_META_DIRTY=y
+# CONFIG_SDFAT_SUPPORT_DIR_SYNC is not set
+CONFIG_SDFAT_DEFAULT_CODEPAGE=437
+CONFIG_SDFAT_DEFAULT_IOCHARSET="utf8"
+# CONFIG_SDFAT_CHECK_RO_ATTR is not set
+CONFIG_SDFAT_ALIGNED_MPAGE_WRITE=y
+CONFIG_SDFAT_VIRTUAL_XATTR=y
+CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
+CONFIG_SDFAT_DEBUG=y
+# CONFIG_SDFAT_DBG_IOCTL is not set
+CONFIG_SDFAT_DBG_MSG=y
+# CONFIG_SDFAT_DBG_BUGON is not set
+# CONFIG_SDFAT_DBG_WARNON is not set
+CONFIG_SDFAT_STATISTICS=y
+CONFIG_SDFAT_UEVENT=y
 CONFIG_NTFS_FS=y
 # CONFIG_NTFS_DEBUG is not set
 CONFIG_NTFS_RW=y
