--- a/arch/arm64/configs/lineageos_h930_defconfig
+++ b/arch/arm64/configs/lineageos_h930_defconfig
@@ -33,8 +33,8 @@ CONFIG_IOMMU_HELPER=y
 CONFIG_KERNEL_MODE_NEON=y
 CONFIG_FIX_EARLYCON_MEM=y
 CONFIG_PGTABLE_LEVELS=3
-CONFIG_MSM_GVM=y
-CONFIG_MSM_GVM_QUIN=y
+# CONFIG_MSM_GVM is not set
+# CONFIG_MSM_GVM_QUIN is not set
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
@@ -163,7 +163,6 @@ CONFIG_SCHED_AUTOGROUP=y
 CONFIG_SCHED_TUNE=y
 # CONFIG_DYNAMIC_STUNE_BOOST is not set
 # CONFIG_STUNE_ASSIST is not set
-CONFIG_CPUSETS_ASSIST=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
@@ -407,6 +406,7 @@ CONFIG_ARM64_ERRATUM_824069=y
 CONFIG_ARM64_ERRATUM_819472=y
 CONFIG_ARM64_ERRATUM_832075=y
 CONFIG_ARM64_ERRATUM_845719=y
+CONFIG_ARM64_ERRATUM_843419=y
 CONFIG_ARM64_ERRATUM_1024718=y
 CONFIG_CAVIUM_ERRATUM_22375=y
 CONFIG_CAVIUM_ERRATUM_23154=y
@@ -3977,7 +3977,7 @@ CONFIG_EDAC_MM_EDAC=y
 CONFIG_EDAC_CORTEX_ARM64=y
 # CONFIG_EDAC_CORTEX_ARM64_PANIC_ON_CE is not set
 # CONFIG_EDAC_CORTEX_ARM64_DBE_IRQ_ONLY is not set
-CONFIG_EDAC_CORTEX_ARM64_PANIC_ON_UE=y
+# CONFIG_EDAC_CORTEX_ARM64_PANIC_ON_UE is not set
 CONFIG_RTC_LIB=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_HCTOSYS=y
@@ -4437,7 +4437,7 @@ CONFIG_ICNSS=y
 CONFIG_MSM_SECURE_BUFFER=y
 # CONFIG_MSM_GLADIATOR_ERP is not set
 CONFIG_MSM_GLADIATOR_ERP_V2=y
-CONFIG_PANIC_ON_GLADIATOR_ERROR_V2=y
+# CONFIG_PANIC_ON_GLADIATOR_ERROR_V2 is not set
 # CONFIG_MSM_GLADIATOR_ERROR_V2_MAIN_LOGGER_ONLY is not set
 # CONFIG_MSM_GLADIATOR_HANG_DETECT is not set
 # CONFIG_MSM_CORE_HANG_DETECT is not set
@@ -4966,22 +4966,6 @@ CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_EXFAT_DISCARD=y
 CONFIG_EXFAT_COMPAT_TUXERA=y
 # CONFIG_EXFAT_DEBUG is not set
-CONFIG_SDFAT_FS=y
-CONFIG_SDFAT_DELAYED_META_DIRTY=y
-# CONFIG_SDFAT_SUPPORT_DIR_SYNC is not set
-CONFIG_SDFAT_DEFAULT_CODEPAGE=437
-CONFIG_SDFAT_DEFAULT_IOCHARSET="utf8"
-# CONFIG_SDFAT_CHECK_RO_ATTR is not set
-CONFIG_SDFAT_ALIGNED_MPAGE_WRITE=y
-CONFIG_SDFAT_VIRTUAL_XATTR=y
-CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
-CONFIG_SDFAT_DEBUG=y
-# CONFIG_SDFAT_DBG_IOCTL is not set
-CONFIG_SDFAT_DBG_MSG=y
-# CONFIG_SDFAT_DBG_BUGON is not set
-# CONFIG_SDFAT_DBG_WARNON is not set
-CONFIG_SDFAT_STATISTICS=y
-CONFIG_SDFAT_UEVENT=y
 CONFIG_NTFS_FS=y
 # CONFIG_NTFS_DEBUG is not set
 CONFIG_NTFS_RW=y
@@ -5159,7 +5143,7 @@ CONFIG_HAVE_ARCH_KASAN=y
 # CONFIG_DETECT_HUNG_TASK is not set
 CONFIG_WQ_WATCHDOG=y
 # CONFIG_PANIC_ON_OOPS is not set
-CONFIG_PANIC_ON_OOPS_VALUE=0
+# CONFIG_PANIC_ON_OOPS_VALUE is not set
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_SCHED_DEBUG=y
 # CONFIG_SCHED_INFO is not set
