--- a/arch/arm64/configs/lineageos_h930_defconfig
+++ b/arch/arm64/configs/lineageos_h930_defconfig
@@ -25,6 +25,7 @@ CONFIG_HAVE_GENERIC_RCU_GUP=y
 CONFIG_ARCH_DMA_ADDR_T_64BIT=y
 CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_NEED_SG_DMA_LENGTH=y
+CONFIG_SMP=y
 CONFIG_HOTPLUG_SIZE_BITS=30
 CONFIG_ARM64_DMA_USE_IOMMU=y
 CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=9
@@ -163,6 +164,7 @@ CONFIG_SCHED_AUTOGROUP=y
 CONFIG_SCHED_TUNE=y
 # CONFIG_DYNAMIC_STUNE_BOOST is not set
 # CONFIG_STUNE_ASSIST is not set
+# CONFIG_CPUSETS_ASSIST is not set
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
@@ -406,7 +408,6 @@ CONFIG_ARM64_ERRATUM_824069=y
 CONFIG_ARM64_ERRATUM_819472=y
 CONFIG_ARM64_ERRATUM_832075=y
 CONFIG_ARM64_ERRATUM_845719=y
-CONFIG_ARM64_ERRATUM_843419=y
 CONFIG_ARM64_ERRATUM_1024718=y
 CONFIG_CAVIUM_ERRATUM_22375=y
 CONFIG_CAVIUM_ERRATUM_23154=y
@@ -618,7 +619,16 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_BOOST is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
-# CONFIG_CPU_INPUT_BOOST is not set
+CONFIG_CPU_INPUT_BOOST=y
+CONFIG_POWERHAL_BOOST_DURATION_MS=0
+CONFIG_INPUT_BOOST_DURATION_MS=0
+CONFIG_WAKE_BOOST_DURATION_MS=1000
+CONFIG_BASE_BOOST_FREQ_LP=0
+CONFIG_BASE_BOOST_FREQ_PERF=0
+CONFIG_INPUT_BOOST_FREQ_LP=0
+CONFIG_INPUT_BOOST_FREQ_PERF=0
+CONFIG_MAX_BOOST_FREQ_LP=1900800
+CONFIG_MAX_BOOST_FREQ_PERF=2457600
 
 #
 # CPU frequency scaling drivers
@@ -3316,7 +3326,6 @@ CONFIG_QTI_PP=y
 CONFIG_SND_SOC_CPE=y
 # CONFIG_SND_SOC_INT_CODEC is not set
 # CONFIG_SND_SOC_EXT_CODEC is not set
-# CONFIG_SND_SOC_MSM8996 is not set
 # CONFIG_SND_SOC_MSM8996_VM is not set
 CONFIG_SND_SOC_MSM8998=y
 CONFIG_SND_LGE_MABL=y
@@ -4562,10 +4571,6 @@ CONFIG_DEVFREQ_GOV_MEMLAT=y
 CONFIG_QCOM_DEVFREQ_DEVBW=y
 CONFIG_SPDM_SCM=y
 CONFIG_DEVFREQ_SPDM=y
-CONFIG_DEVFREQ_BOOST=y
-CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=5000
-CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=5000
-CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=13763
 # CONFIG_PM_DEVFREQ_EVENT is not set
 CONFIG_EXTCON=y
 
@@ -4966,6 +4971,22 @@ CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_EXFAT_DISCARD=y
 CONFIG_EXFAT_COMPAT_TUXERA=y
 # CONFIG_EXFAT_DEBUG is not set
+CONFIG_SDFAT_FS=y
+CONFIG_SDFAT_DELAYED_META_DIRTY=y
+# CONFIG_SDFAT_SUPPORT_DIR_SYNC is not set
+CONFIG_SDFAT_DEFAULT_CODEPAGE=437
+CONFIG_SDFAT_DEFAULT_IOCHARSET="utf8"
+# CONFIG_SDFAT_CHECK_RO_ATTR is not set
+CONFIG_SDFAT_ALIGNED_MPAGE_WRITE=y
+CONFIG_SDFAT_VIRTUAL_XATTR=y
+CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
+CONFIG_SDFAT_DEBUG=y
+# CONFIG_SDFAT_DBG_IOCTL is not set
+CONFIG_SDFAT_DBG_MSG=y
+# CONFIG_SDFAT_DBG_BUGON is not set
+# CONFIG_SDFAT_DBG_WARNON is not set
+CONFIG_SDFAT_STATISTICS=y
+CONFIG_SDFAT_UEVENT=y
 CONFIG_NTFS_FS=y
 # CONFIG_NTFS_DEBUG is not set
 CONFIG_NTFS_RW=y
@@ -5143,7 +5164,7 @@ CONFIG_HAVE_ARCH_KASAN=y
 # CONFIG_DETECT_HUNG_TASK is not set
 CONFIG_WQ_WATCHDOG=y
 # CONFIG_PANIC_ON_OOPS is not set
-# CONFIG_PANIC_ON_OOPS_VALUE is not set
+CONFIG_PANIC_ON_OOPS_VALUE=0
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_SCHED_DEBUG=y
 # CONFIG_SCHED_INFO is not set
