--- a/arch/arm64/configs/lineageos_h930_defconfig
+++ b/arch/arm64/configs/lineageos_h930_defconfig
@@ -25,7 +25,6 @@ CONFIG_HAVE_GENERIC_RCU_GUP=y
 CONFIG_ARCH_DMA_ADDR_T_64BIT=y
 CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_NEED_SG_DMA_LENGTH=y
-CONFIG_SMP=y
 CONFIG_HOTPLUG_SIZE_BITS=30
 CONFIG_ARM64_DMA_USE_IOMMU=y
 CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=9
@@ -4923,7 +4922,15 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_OCFS2_FS is not set
 # CONFIG_BTRFS_FS is not set
 # CONFIG_NILFS2_FS is not set
-# CONFIG_F2FS_FS is not set
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_F2FS_FS_SECURITY=y
+# CONFIG_F2FS_CHECK_FS is not set
+# CONFIG_F2FS_FS_ENCRYPTION is not set
+# CONFIG_F2FS_IO_TRACE is not set
+# CONFIG_F2FS_FAULT_INJECTION is not set
 # CONFIG_FS_DAX is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
@@ -5407,7 +5414,7 @@ CONFIG_CRYPTO_XCBC=y
 # Digest
 #
 CONFIG_CRYPTO_CRC32C=y
-# CONFIG_CRYPTO_CRC32 is not set
+CONFIG_CRYPTO_CRC32=y
 # CONFIG_CRYPTO_CRCT10DIF is not set
 CONFIG_CRYPTO_GHASH=y
 # CONFIG_CRYPTO_POLY1305 is not set
