Fix random reboot again

--- a/arch/arm/boot/dts/qcom/msm8998.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8998.dtsi
@@ -1,4 +1,4 @@
-/* Copyright (c) 2015-2018, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2015-2017, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -740,7 +740,7 @@
 		qcom,src-dst-ports = <1 512>;
 		qcom,active-only;
 		qcom,bw-tbl =
-                        <   762 /*  100 MHz */ >,
+			<   762 /*  100 MHz */ >,
 			<  1144 /*  150 MHz */ >,
 			<  1525 /*  200 MHz */ >,
 			<  2288 /*  300 MHz */ >,
@@ -769,7 +769,7 @@
 		qcom,src-dst-ports = <1 512>;
 		qcom,active-only;
 		qcom,bw-tbl =
-                        <   762 /*  100 MHz */ >,
+			<   762 /*  100 MHz */ >,
 			<  1144 /*  150 MHz */ >,
 			<  1525 /*  200 MHz */ >,
 			<  2288 /*  300 MHz */ >,
@@ -789,7 +789,7 @@
 		qcom,src-dst-ports = <1 512>;
 		qcom,active-only;
 		qcom,bw-tbl =
-                        <   762 /*  100 MHz */ >,
+			<   762 /*  100 MHz */ >,
 			<  1144 /*  150 MHz */ >,
 			<  1525 /*  200 MHz */ >,
 			<  2288 /*  300 MHz */ >,
@@ -802,6 +802,7 @@
 			< 11863 /* 1555 MHz */ >,
 			< 13763 /* 1804 MHz */ >;
 	};
+
 	memlat_cpu4: qcom,memlat-cpu4 {
 		compatible = "qcom,devbw";
 		governor = "powersave";
@@ -809,7 +810,7 @@
 		qcom,active-only;
 		status = "ok";
 		qcom,bw-tbl =
-                        <   762 /*  100 MHz */ >,
+			<   762 /*  100 MHz */ >,
 			<  1144 /*  150 MHz */ >,
 			<  1525 /*  200 MHz */ >,
 			<  2288 /*  300 MHz */ >,
@@ -828,7 +829,7 @@
 		qcom,cpulist =	<&CPU0 &CPU1 &CPU2 &CPU3>;
 		qcom,target-dev = <&memlat_cpu0>;
 		qcom,core-dev-table =
-                        <  300000 1525 >,
+			<  300000 1525 >,
 			<  499200 3143 >,
 			< 1113600 4173 >,
 			< 1881600 7759 >;
@@ -847,7 +848,6 @@
 			< 1555000 11863 >,
 			< 1804000 13763 >;
 	};
-
 
 	devfreq_cpufreq: devfreq-cpufreq {
 		mincpubw-cpufreq {
@@ -2662,15 +2662,15 @@
 		compatible = "qcom,msm-thermal";
 		qcom,sensor-id = <1>;
 		qcom,poll-ms = <200>;
-		qcom,therm-reset-temp = <105>;
-		qcom,core-limit-temp = <105>;
+		qcom,therm-reset-temp = <115>;
+		qcom,core-limit-temp = <115>;
 		qcom,core-temp-hysteresis = <10>;
 		qcom,hotplug-temp = <105>;
 		qcom,hotplug-temp-hysteresis = <10>;
 		qcom,online-hotplug-core;
 		qcom,synchronous-cluster-id = <0 1>;
-		qcom,synchronous-cluster-map = <>,
-						<>;
+		qcom,synchronous-cluster-map = <0 4 &CPU0 &CPU1 &CPU2 &CPU3>,
+						<1 4 &CPU4 &CPU5 &CPU6 &CPU7>;
 		clock-names = "osm";
 		clocks = <&clock_cpu clk_pwrcl_clk>;
 
@@ -2939,7 +2939,7 @@
 		qcom,ibat-monitor {
 			qcom,low-threshold-uamp = <3400000>;
 			qcom,high-threshold-uamp = <4200000>;
-			qcom,mitigation-freq-khz = <1248000>;
+			qcom,mitigation-freq-khz = <1824000>;
 			qcom,vph-high-threshold-uv = <3500000>;
 			qcom,vph-low-threshold-uv = <3300000>;
 			qcom,soc-low-threshold = <5>;
@@ -3076,9 +3076,9 @@
 			reg = <0x10 8>;
 		};
 
-		dload_type@1c {
+		dload_type@18 {
 			compatible = "qcom,msm-imem-dload-type";
-			reg = <0x1c 4>;
+			reg = <0x18 4>;
 		};
 
 		restart_reason@65c {
