--- a/arch/arm64/configs/lineageos_h930_defconfig
+++ b/arch/arm64/configs/lineageos_h930_defconfig
@@ -140,6 +140,7 @@ CONFIG_PELT_HALFLIFE_16=y
 CONFIG_UCLAMP_TASK=y
 CONFIG_UCLAMP_BUCKETS_COUNT=5
 CONFIG_UCLAMP_TASK_GROUP=y
+CONFIG_UCLAMP_ASSIST=y
 CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
@@ -442,7 +443,7 @@ CONFIG_HZ_300=y
 # CONFIG_HZ_1000 is not set
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_SUPPORTS_DEBUG_PAGEALLOC=y
-CONFIG_LTO=y
+# CONFIG_LTO is not set
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
