--- a/arch/arm64/configs/lineageos_h930_defconfig
+++ b/arch/arm64/configs/lineageos_h930_defconfig
@@ -439,6 +439,7 @@ CONFIG_HZ_300=y
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_SUPPORTS_DEBUG_PAGEALLOC=y
 # CONFIG_LTO is not set
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
 CONFIG_ARCH_SPARSEMEM_DEFAULT=y
@@ -3174,7 +3175,6 @@ CONFIG_LGE_DISPLAY_DISPLAYPORT_PROPRIETARY=y
 # CONFIG_VGASTATE is not set
 # CONFIG_LOGO is not set
 CONFIG_SOUND=y
-CONFIG_SOUND_CONTROL=y
 # CONFIG_SOUND_OSS_CORE is not set
 CONFIG_SND=y
 CONFIG_SND_TIMER=y
