defconfig:remove LGE_ADAPTIVE_READAHEAD and LGE_BDI_STRICTLIMIT_DIRTY

--- a/arch/arm64/configs/lineageos_h930_defconfig
+++ b/arch/arm64/configs/lineageos_h930_defconfig
@@ -497,8 +497,8 @@ CONFIG_READAHEAD_MMAP_PAGE_CNT=8
 # CONFIG_CMA_PINPAGE_MIGRATION is not set
 CONFIG_MIGRATE_HIGHORDER=y
 CONFIG_HIGHORDER_PAGES=46080
-CONFIG_LGE_ADAPTIVE_READAHEAD=y
-CONFIG_LGE_BDI_STRICTLIMIT_DIRTY=y
+# CONFIG_LGE_ADAPTIVE_READAHEAD is not set
+# CONFIG_LGE_BDI_STRICTLIMIT_DIRTY is not set
 CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
