--- a/arch/arm64/configs/lineageos_h930_defconfig
+++ b/arch/arm64/configs/lineageos_h930_defconfig
@@ -2613,15 +2613,15 @@ CONFIG_CPU_THERMAL=y
 # CONFIG_THERMAL_EMULATION is not set
 CONFIG_LIMITS_MONITOR=y
 CONFIG_LIMITS_LITE_HW=y
-CONFIG_THERMAL_MONITOR=y
+# CONFIG_THERMAL_MONITOR is not set
 CONFIG_THERMAL_SWITCH=y
 CONFIG_THERMAL_TSENS8974=y
 # CONFIG_IMX_THERMAL is not set
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
-CONFIG_QCOM_THERMAL_LIMITS_DCVS=y
+# CONFIG_QCOM_THERMAL_LIMITS_DCVS is not set
 # CONFIG_QCOM_SPMI_TEMP_ALARM is not set
-CONFIG_LGE_PM_THERMAL_LOG=y
+# CONFIG_LGE_PM_THERMAL_LOG is not set
 CONFIG_LGE_PM_THERMAL_VTS=y
 # CONFIG_LGE_PM_THERMAL_SEPARATE_BOOT_FREQ_MITIGATION is not set
 # CONFIG_WATCHDOG is not set
