--- a/arch/arm64/configs/lineageos_h930_defconfig
+++ b/arch/arm64/configs/lineageos_h930_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.271 Kernel Configuration
+# Linux/arm64 4.4.278 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -97,7 +97,7 @@ CONFIG_HIGH_RES_TIMERS=y
 # CONFIG_TICK_CPU_ACCOUNTING is not set
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 CONFIG_IRQ_TIME_ACCOUNTING=y
-CONFIG_SCHED_WALT=y
+# CONFIG_SCHED_WALT is not set
 # CONFIG_BSD_PROCESS_ACCT is not set
 CONFIG_TASKSTATS=y
 # CONFIG_TASK_DELAY_ACCT is not set
@@ -407,6 +407,7 @@ CONFIG_ARM64_ERRATUM_824069=y
 CONFIG_ARM64_ERRATUM_819472=y
 CONFIG_ARM64_ERRATUM_832075=y
 CONFIG_ARM64_ERRATUM_845719=y
+CONFIG_ARM64_ERRATUM_843419=y
 CONFIG_ARM64_ERRATUM_1024718=y
 CONFIG_CAVIUM_ERRATUM_22375=y
 CONFIG_CAVIUM_ERRATUM_23154=y
@@ -3114,7 +3115,7 @@ CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 # CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS is not set
 CONFIG_FB_MSM_MDSS_DP_PANEL=y
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
-CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
+# CONFIG_FB_MSM_MDSS_XLOG_DEBUG is not set
 # CONFIG_LGE_MIPI_LUCY_INCELL_QHD_CMD_PANEL is not set
 CONFIG_LGE_MIPI_JOAN_ONCELL_QHD_CMD_PANEL=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
@@ -3876,7 +3877,7 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
 CONFIG_MMC_BLOCK_DEFERRED_RESUME_WAKE_UP=y
 # CONFIG_SDIO_UART is not set
-CONFIG_MMC_TEST=y
+# CONFIG_MMC_TEST is not set
 # CONFIG_MMC_SIMULATE_MAX_SPEED is not set
 
 #
@@ -4368,7 +4369,7 @@ CONFIG_ARM_SMMU=y
 # CONFIG_ARM_SMMU_V3 is not set
 CONFIG_IOMMU_DEBUG=y
 # CONFIG_IOMMU_DEBUG_TRACKING is not set
-CONFIG_IOMMU_TESTS=y
+# CONFIG_IOMMU_TESTS is not set
 
 #
 # Remoteproc drivers
@@ -4960,7 +4961,7 @@ CONFIG_FAT_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
-CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
+CONFIG_FAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_DEFAULT_CODEPAGE=437
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
@@ -4977,11 +4978,7 @@ CONFIG_SDFAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_SDFAT_ALIGNED_MPAGE_WRITE=y
 CONFIG_SDFAT_VIRTUAL_XATTR=y
 CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
-CONFIG_SDFAT_DEBUG=y
-# CONFIG_SDFAT_DBG_IOCTL is not set
-CONFIG_SDFAT_DBG_MSG=y
-# CONFIG_SDFAT_DBG_BUGON is not set
-# CONFIG_SDFAT_DBG_WARNON is not set
+# CONFIG_SDFAT_DEBUG is not set
 CONFIG_SDFAT_STATISTICS=y
 CONFIG_SDFAT_UEVENT=y
 CONFIG_NTFS_FS=y
@@ -5489,6 +5486,7 @@ CONFIG_PKCS7_MESSAGE_PARSER=y
 #
 # Certificates for signature checking
 #
+CONFIG_MODULE_SIG_KEY="certs/signing_key.pem"
 CONFIG_SYSTEM_TRUSTED_KEYRING=y
 CONFIG_SYSTEM_TRUSTED_KEYS="verity.x509.pem"
 CONFIG_ARM64_CRYPTO=y
@@ -5517,7 +5515,7 @@ CONFIG_GENERIC_NET_UTILS=y
 CONFIG_GENERIC_PCI_IOMAP=y
 CONFIG_GENERIC_IO=y
 CONFIG_ARCH_USE_CMPXCHG_LOCKREF=y
-CONFIG_ARCH_HAS_FAST_MULTIPLIER=y
+# CONFIG_ARCH_HAS_FAST_MULTIPLIER is not set
 CONFIG_CRC_CCITT=y
 CONFIG_CRC16=y
 # CONFIG_CRC_T10DIF is not set
