--- a/arch/arm64/configs/lineageos_h930_defconfig
+++ b/arch/arm64/configs/lineageos_h930_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.278 Kernel Configuration
+# Linux/arm64 4.4.279 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -3861,8 +3861,8 @@ CONFIG_LGE_USB_SUPPORT_LIST_SERIAL=y
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
 CONFIG_MMC_PERF_PROFILING=y
-CONFIG_LGE_MMC_CLK_SCALE_DISABLE=y
-CONFIG_LGE_TRAY_EVENT=y
+# CONFIG_LGE_MMC_CLK_SCALE_DISABLE is not set
+# CONFIG_LGE_TRAY_EVENT is not set
 # CONFIG_MMC_RING_BUFFER is not set
 # CONFIG_MMC_EMBEDDED_SDIO is not set
 CONFIG_MMC_PARANOID_SD_INIT=y
