Rollback defconfig changes * Changes from d8541184180cebc880297ad3a4c32eb98e363d16 to 4f8899bcae262f19783dca2624d3a64c7f09aae2 might got a boot loop on R,try to fix it.

--- a/arch/arm64/configs/joan_global_com-perf_defconfig
+++ b/arch/arm64/configs/joan_global_com-perf_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Tachyon_Minimalist"
+CONFIG_LOCALVERSION="-perf"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
@@ -20,7 +20,7 @@ CONFIG_CGROUP_SCHEDTUNE=y
 CONFIG_RT_GROUP_SCHED=y
 CONFIG_SCHED_HMP=y
 CONFIG_SCHED_HMP_CSTATE_AWARE=y
-# CONFIG_SCHED_CORE_CTL is not set
+CONFIG_SCHED_CORE_CTL=y
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_PID_NS is not set
@@ -86,17 +86,7 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-# CONFIG_CPU_BOOST is not set
-# CONFIG_CPU_BOOST is not set
-CONFIG_CPU_INPUT_BOOST=y
-CONFIG_INPUT_BOOST_DURATION_MS=1000
-CONFIG_WAKE_BOOST_DURATION_MS=1000
-CONFIG_BASE_BOOST_FREQ_LP=300000
-CONFIG_BASE_BOOST_FREQ_PERF=806400
-CONFIG_INPUT_BOOST_FREQ_LP=1036800
-CONFIG_INPUT_BOOST_FREQ_PERF=1132800
-CONFIG_MAX_BOOST_FREQ_LP=19008000
-CONFIG_MAX_BOOST_FREQ_PERF=2457600
+CONFIG_CPU_BOOST=y
 CONFIG_NET=y
 CONFIG_NET_IPVTI=y
 CONFIG_PACKET=y
@@ -440,7 +430,7 @@ CONFIG_APSS_CORE_EA=y
 CONFIG_MSM_APM=y
 CONFIG_LGE_PM=y
 CONFIG_LGE_PM_BATT_MANAGER=y
-# CONFIG_LGE_PM_CANCUN is not set
+CONFIG_LGE_PM_CANCUN=y
 CONFIG_LGE_PM_DEBUG=y
 CONFIG_LGE_PM_EMBEDDED_BATTERY=y
 CONFIG_LGE_PM_SHIP_MODE=y
@@ -448,7 +438,7 @@ CONFIG_LGE_PM_SMPL_COUNTER=y
 CONFIG_LGE_PM_THERMAL_LOG=y
 CONFIG_LGE_PM_THERMAL_SEPARATE_BOOT_FREQ_MITIGATION=y
 CONFIG_LGE_PM_THERMAL_VTS=y
-# CONFIG_LGE_PM_TRITON is not set
+CONFIG_LGE_PM_TRITON=y
 CONFIG_LGE_PM_VENEER_PSY=y
 CONFIG_LGE_MISC_PWR_CONTROLLER=y
 CONFIG_POWER_SUPPLY=y
@@ -697,7 +687,7 @@ CONFIG_PANIC_ON_GLADIATOR_ERROR_V2=y
 CONFIG_MSM_RUN_QUEUE_STATS=y
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_MSM_ADSP_LOADER=y
-# CONFIG_MSM_PERFORMANCE is not set
+CONFIG_MSM_PERFORMANCE=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_PIL=y
 CONFIG_MSM_PIL_SSR_GENERIC=y
@@ -928,79 +918,3 @@ CONFIG_MSM_MHI_UCI=y
 CONFIG_MSM_RMNET_MHI=y
 # CONFIG_DEVPORT is not set
 CONFIG_CRYPTO_GCM=y
-CONFIG_TOUCHSCREEN_SCROFF_VOLCTR=y
-CONFIG_SOUND_CONTROL=y
-CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
-CONFIG_BOEFFLA_WL_BLOCKER=y
-CONFIG_DEVFREQ_BOOST=y
-CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=1000
-CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=1000
-CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=11863
-# CONFIG_LGE_PM_CANCUN is not set
-# CONFIG_LGE_PM_TRITON is not set
-# CONFIG_MSM_PERFORMANCE is not set
-# CONFIG_SCHED_CORE_CTL is not set
-# CONFIG_IOSCHED_TEST is not set
-# CONFIG_SCSI_UFS_TEST is not set
-# CONFIG_ATH_CARDS is not set
-# CONFIG_WIL6210 is not set
-# CONFIG_MSM_RDBG is not set
-# CONFIG_USB_GSPCA is not set
-# CONFIG_DVB_MPQ is not set
-# CONFIG_DVB_MPQ_DEMUX is not set
-# CONFIG_TSPP is not set
-# CONFIG_MSM_11AD is not set
-# CONFIG_MODULES is not set
-CONFIG_MODULE_FORCE_LOAD=y # change
-CONFIG_MODULE_UNLOAD=y CONFIG_MODULE_FORCE_UNLOAD=y
-CONFIG_MODVERSIONS=y
-# CONFIG_MODULE_SRCVERSION_ALL is not set
-# CONFIG_MODULE_SIG is not set # change
-CONFIG_MODULE_SIG_FORCE=y
-CONFIG_MODULE_SIG_ALL=y
-# CONFIG_MODULE_SIG_SHA1 is not set
-# CONFIG_MODULE_SIG_SHA224 is not set
-# CONFIG_MODULE_SIG_SHA256 is not set
-# CONFIG_MODULE_SIG_SHA384 is not set
-CONFIG_MODULE_SIG_SHA512=y
-CONFIG_MODULE_SIG_HASH="sha512"
-# CONFIG_MODULE_COMPRESS is not set
-# CONFIG_MODULES_TREE_LOOKUP is not set
-CONFIG_EXFAT_FS=y
-CONFIG_EXFAT_DEFAULT_CODEPAGE=437
-CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
-# CONFIG_EXFAT_VIRTUAL_XATTR is not set
-CONFIG_EXFAT_DISCARD=y
-CONFIG_EXFAT_COMPAT_TUXERA=y
-# CONFIG_EXFAT_COMPAT_UFSD is not set
-# CONFIG_EXFAT_DEBUG is not set
-# CONFIG_SDFAT_FS is not set
-CONFIG_SDFAT_USE_FOR_EXFAT=y
-CONFIG_SDFAT_DELAYED_META_DIRTY=y
-CONFIG_SDFAT_SUPPORT_DIR_SYNC=y
-CONFIG_SDFAT_DEFAULT_CODEPAGE=437
-CONFIG_SDFAT_DEFAULT_IOCHARSET="utf8"
-CONFIG_SDFAT_CHECK_RO_ATTR=y
-CONFIG_SDFAT_ALIGNED_MPAGE_WRITE=y
-CONFIG_SDFAT_VIRTUAL_XATTR=y
-CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
-# CONFIG_SDFAT_DEBUG is not set
-# CONFIG_SDFAT_DBG_MSG is not set
-# CONFIG_SDFAT_STATISTICS is not set
-CONFIG_SDFAT_DELAY_ALLOC=y
-CONFIG_SDFAT_SMART_ALLOC=y
-CONFIG_NTFS_FS=y
-# CONFIG_NTFS_DEBUG is not set
-CONFIG_NTFS_RW=y
-# CONFIG_F2FS_FS is not set
-CONFIG_F2FS_STAT_FS=y
-CONFIG_F2FS_FS_XATTR=y
-CONFIG_F2FS_FS_POSIX_ACL=y
-CONFIG_F2FS_FS_SECURITY=y
-# CONFIG_F2FS_CHECK_FS is not set
-CONFIG_F2FS_FS_ENCRYPTION=y
-# CONFIG_F2FS_IO_TRACE is not set
-CONFIG_FORCE_FAST_CHARGE=y
-
-
-
