--- a/arch/arm64/configs/lineageos_h930_defconfig
+++ b/arch/arm64/configs/lineageos_h930_defconfig
@@ -633,7 +633,10 @@ CONFIG_MAX_BOOST_FREQ_PERF=2457600
 # CPU frequency scaling drivers
 #
 # CONFIG_CPUFREQ_DT is not set
+
 # CONFIG_ARM_BIG_LITTLE_CPUFREQ is not set
+CONFIG_LGE_PM_TRITON=y
+CONFIG_LGE_PM_CANCUN=y
 # CONFIG_ARM_KIRKWOOD_CPUFREQ is not set
 # CONFIG_ACPI_CPPC_CPUFREQ is not set
 CONFIG_CPU_FREQ_MSM=y
@@ -5493,6 +5496,7 @@ CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
 CONFIG_CRYPTO_GHASH_ARM64_CE=y
 CONFIG_CRYPTO_POLY_HASH_ARM64_CE=y
+CONFIG_CRYPTO_AES_ARM64=y
 CONFIG_CRYPTO_AES_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
