--- a/arch/arm64/configs/lineageos_h930_defconfig
+++ b/arch/arm64/configs/lineageos_h930_defconfig
@@ -3864,8 +3864,8 @@ CONFIG_LGE_USB_SUPPORT_LIST_SERIAL=y
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
 CONFIG_MMC_PERF_PROFILING=y
-# CONFIG_LGE_MMC_CLK_SCALE_DISABLE is not set
-# CONFIG_LGE_TRAY_EVENT is not set
+CONFIG_LGE_MMC_CLK_SCALE_DISABLE=y
+CONFIG_LGE_TRAY_EVENT=y
 # CONFIG_MMC_RING_BUFFER is not set
 # CONFIG_MMC_EMBEDDED_SDIO is not set
 CONFIG_MMC_PARANOID_SD_INIT=y
