defconfig:enable thermal&Re eanble some options *Fixed panic in some cases.

--- a/arch/arm64/configs/lineageos_h930_defconfig
+++ b/arch/arm64/configs/lineageos_h930_defconfig
@@ -2617,17 +2617,17 @@ CONFIG_CPU_THERMAL=y
 # CONFIG_THERMAL_EMULATION is not set
 CONFIG_LIMITS_MONITOR=y
 CONFIG_LIMITS_LITE_HW=y
-# CONFIG_THERMAL_MONITOR is not set
+CONFIG_THERMAL_MONITOR=y
 CONFIG_THERMAL_SWITCH=y
 CONFIG_THERMAL_TSENS8974=y
 # CONFIG_IMX_THERMAL is not set
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
-# CONFIG_QCOM_THERMAL_LIMITS_DCVS is not set
+CONFIG_QCOM_THERMAL_LIMITS_DCVS=y
 # CONFIG_QCOM_SPMI_TEMP_ALARM is not set
-# CONFIG_LGE_PM_THERMAL_LOG is not set
+CONFIG_LGE_PM_THERMAL_LOG=y
 CONFIG_LGE_PM_THERMAL_VTS=y
-# CONFIG_LGE_PM_THERMAL_SEPARATE_BOOT_FREQ_MITIGATION is not set
+CONFIG_LGE_PM_THERMAL_SEPARATE_BOOT_FREQ_MITIGATION=y
 # CONFIG_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
 
@@ -5518,7 +5518,7 @@ CONFIG_GENERIC_NET_UTILS=y
 CONFIG_GENERIC_PCI_IOMAP=y
 CONFIG_GENERIC_IO=y
 CONFIG_ARCH_USE_CMPXCHG_LOCKREF=y
-# CONFIG_ARCH_HAS_FAST_MULTIPLIER is not set
+CONFIG_ARCH_HAS_FAST_MULTIPLIER=y
 CONFIG_CRC_CCITT=y
 CONFIG_CRC16=y
 # CONFIG_CRC_T10DIF is not set
