--- a/arch/arm64/configs/lineageos_h930_defconfig
+++ b/arch/arm64/configs/lineageos_h930_defconfig
@@ -325,14 +325,14 @@ CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_ANXIETY=y
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_CFQ=y
-# CONFIG_DEFAULT_ZEN is not set
+# CONFIG_DEFAULT_CFQ is not set
+CONFIG_DEFAULT_ZEN=y
 # CONFIG_DEFAULT_MAPLE is not set
 # CONFIG_DEFAULT_ANXIETY is not set
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_FIOPS is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_IOSCHED="zen"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
